2.Assign Leave Page -> Labels and Text boxes should be horizontally aligned -- fixed

--- a/php/orangehrm/symfony/plugins/orangehrmCoreLeavePlugin/web/css/assignLeaveSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmCoreLeavePlugin/web/css/assignLeaveSuccess.css
@@ -32,6 +32,7 @@ div.error {
     text-align: left;
     padding-left: 156px;
     padding-top: 2px;
+    clear: both;
 }
 
 #assignleave_txtComment{
