--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/addEmployeeSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/addEmployeeSuccess.css
@@ -51,7 +51,7 @@ label {
 }
 
 #chkLogin {
-    margin-top: 5px;
+    margin-top: 3px;
     margin-left: 0;
 }
 
